--- a/Labeller/Form1.resx
+++ b/Labeller/Form1.resx
@@ -128,6 +128,8 @@ Left image click - Srodek Tarczy + Pierscien center
 Right image click - Wyjscie naczyn center
 L - left/right eye
 Z/X - previous/next Pierscien angle
-Control - hide/show drawings</value>
+Control - hide/show drawings
+Backspace - delete last row from CSV
+Space - add last deleted row again - only 1 in memory!</value>
   </data>
 </root>
